[package]
name = "async-httpd-check"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.16", features = ["blocking"] }
async-channel = "1.4.1"
is_type = "0.2.1"
openssl = { version = "0.10", features = ["vendored"] }
